fix: Comprehensive fixes for 20+ critical issues across codebase
CRITICAL RUNTIME FIXES:
- Fix Role import error in withAuthRbac.ts - use UserRole from types
- Add isTlsEnabled function to both mongodb-unified.ts and mongo.ts
- Fix logger.ts to pass original Error to Sentry (preserve stack traces)
- Fix mongodb-unified.ts log message (Connection failed not Disconnection)

SECURITY FIXES:
- Redact secrets from CRITICAL_FIXES_COMPLETE_2025-11-13.md
- HTML-escape notification content in fm-notifications.ts (XSS prevention)
- Validate and sanitize deepLink URLs (block javascript: schemes)
- Increase VS Code auto-accept delay from 3 to 20 seconds
- Enable confirmation notifications for safer editing

DATA INTEGRITY FIXES:
- Fix fm-approval-engine.ts orgId filter for escalation users
- Fix fm-approval-engine.ts undefined policy/currentStage in notifications
- Fix fm-auth-middleware.ts membership check with proper validation
- Fix fm-auth-middleware.ts initialize isOrgMember=false correctly

TYPE SAFETY & API FIXES:
- Export DateFormatType from formatServerDate.ts for consumers
- Fix wpsService.ts remove async from synchronous function
- Fix wpsService.ts remove unused logger import
- Fix wpsService.ts remove unused period variable

UI/UX FIXES:
- Fix app/fm/dashboard/page.tsx overdue calc with UTC timestamps
- Fix app/help/tutorial/getting-started/page.tsx use index for keys
- Fix components/ClientDate.tsx remove formatter from deps + add JSDoc

SCRIPT FIXES:
- Fix scripts/cleanup-pr-branches.sh branch count with grep -c
- Fix scripts/fix-date-hydration-batch.sh rename to file check only

FILES MODIFIED: 15 files (+123, -61 lines)
IMPACT: Fixes runtime errors, security vulnerabilities, data integrity issues
STATUS: All critical issues resolved, system stable on localhost:3000

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,9 +88,9 @@
   
   // Auto-reply and auto-accept (less risky)
   "chat.tools.terminal.autoReplyToPrompts": true,
-  "chat.editing.autoAcceptDelay": 3,
+  "chat.editing.autoAcceptDelay": 20,
   "chat.checkpoints.enabled": true,
-  "chat.notifyWindowOnConfirmation": false,
+  "chat.notifyWindowOnConfirmation": true,
   
   // Disable MCP discovery
   "chat.mcp.discovery.enabled": false,
