fix: resolve 17 critical security, config, and code quality issues
SECURITY FIXES:
- Remove auto-accept delay from devcontainer (contradicted security policy)
- Redact Google OAuth Client Secret from GOOGLE_OAUTH_STATUS.md
- Remove tracked playwright artifact .last-run.json from git

XSS PREVENTION:
- Add HTML attribute escaping to email template href (fm-notifications.ts)

RELIABILITY:
- Add activation status tracking with retry handling (payments callback)
- Require all 3 Twilio env vars (AUTH_TOKEN no longer defaults to empty string)

CODE QUALITY:
- Add language identifier to code fence (USER_SETTINGS_INSTRUCTIONS.md)
- Remove duplicate session callback from auth.config.ts
- Replace 2× console.error with logger.error (recurring-charge.ts)
- Remove unused execSync import (add-missing-translations.js)
- Add missing logger import (formatServerDate.ts)

RTL SUPPORT:
- Replace LTR-only 'right-2' with RTL-aware 'end-2' (budget form)

RUNTIME TYPE SAFETY:
- Remove unused Role type alias from withAuthRbac.ts
- Replace Object.values(Role) with ALL_ROLES constant (3 locations)

PATH MATCHING:
- Fix false positive exclusions using exact path segments (scan-date-hydration.mjs)

All 17 issues resolved. Next: complete remaining 30 TS2349 errors.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,8 +31,8 @@
         // Stop interactive CLI pauses (y/n, prompts)
         "chat.tools.terminal.autoReplyToPrompts": true,
 
-        // Auto-accept edits (correct key)
-        "chat.editing.autoAcceptDelay": 3,
+        // Auto-accept edits DISABLED for security (developers can enable in User Settings)
+        // "chat.editing.autoAcceptDelay": 3,
 
         // Checkpoints for rollback
         "chat.checkpoints.enabled": true,
