fix: comprehensive type safety improvements and quality gate enforcement
Security & Code Quality Improvements:
==============================================

1. CI/CD Quality Gates Enhancement (.github/workflows/fixzit-quality-gates.yml):
   - Removed || echo error masking from lint, typecheck, Fixzit Agent scan
   - Enhanced dependency audit to FAIL on critical vulnerabilities (status >= 16)
   - Workflow now properly enforces code standards instead of silently passing

2. FM Approval Engine (lib/fm-approval-engine.ts):
   - Replaced Math.random() with crypto.randomUUID() for secure workflow IDs
   - Added input validation for required fields (orgId, quotationId, workOrderId)
   - Added authorization check in processDecision to prevent unauthorized approvals
   - Removed 8 unused @ts-expect-error directives (global Mongoose fix working)

3. TypeScript Strict Mode Fixes (18 files):
   - Fixed implicit any types in map/filter/reduce callbacks:
     * app/finance/fm-finance-hooks.ts (lines 236, 291)
     * app/api/marketplace/search/route.ts
     * app/api/marketplace/vendor/products/route.ts
     * app/api/owner/units/[unitId]/history/route.ts
     * app/api/souq/orders/route.ts
     * app/api/work-orders/sla-check/route.ts
     * app/careers/[slug]/page.tsx
     * lib/marketplace/search.ts
     * lib/queries.ts

   - Added Mongoose 8.x Model<T> type parameters:
     * lib/analytics/incrementWithRetry.ts
     * lib/api/crud-factory.ts (+ lean() method casts)
     * lib/mongoose-typed.ts

   - Fixed authentication type issues:
     * auth.config.ts: Added subscriptionPlan field, fixed role type casting
     * components/Sidebar.tsx: Fixed isActive boolean, UserRole casting
     * config/navigation.ts: Simplified filter type predicate

4. Translation File Fixes (i18n/dictionaries/ar.ts):
   - Fixed duplicate property names by renaming to *Menu suffixes:
     * propertiesMenu, financeMenu, hrMenu, adminMenu
     * crmMenu, marketplaceMenu, supportMenu
     * compliance

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Fixzit Agent (dry, full similarity)
         shell: bash
-        run: node scripts/fixzit-agent.mjs --report --port 3000 --keepAlive=false --limit=0 || true
+        run: node scripts/fixzit-agent.mjs --report --port 3000 --keepAlive=false --limit=0
 
       - name: Delta & Regression checks
         shell: bash
@@ -106,18 +106,18 @@ jobs:
         shell: bash
         run: |
           case "${{ steps.pm.outputs.manager }}" in
-            pnpm) pnpm lint || pnpm run eslint . || echo "Lint completed with warnings" ;;
-            yarn) yarn lint || yarn run eslint . || echo "Lint completed with warnings" ;;
-            *) npm run lint || npm run eslint . || echo "Lint completed with warnings" ;;
+            pnpm) pnpm lint || pnpm run eslint . ;;
+            yarn) yarn lint || yarn run eslint . ;;
+            *) npm run lint || npm run eslint . ;;
           esac
           
       - name: Typecheck
         shell: bash
         run: |
           case "${{ steps.pm.outputs.manager }}" in
-            pnpm) pnpm typecheck || pnpm run tsc --noEmit || echo "Typecheck completed with warnings" ;;
-            yarn) yarn typecheck || yarn run tsc --noEmit || echo "Typecheck completed with warnings" ;;
-            *) npm run typecheck || npm run tsc --noEmit || echo "Typecheck completed with warnings" ;;
+            pnpm) pnpm typecheck || pnpm run tsc --noEmit ;;
+            yarn) yarn typecheck || yarn run tsc --noEmit ;;
+            *) npm run typecheck || npm run tsc --noEmit ;;
           esac
 
       # ---------- Unit Tests -------------
@@ -306,9 +306,12 @@ jobs:
               ;;
           esac
           
-          if [ "${audit_status}" -ne 0 ]; then
+          # Fail on critical vulnerabilities (audit level 4+)
+          if [ "${audit_status}" -ge 16 ]; then
+            echo "::error::Critical security vulnerabilities detected. See .artifacts/dep-audit.json"
+            exit 1
+          elif [ "${audit_status}" -ne 0 ]; then
             echo "::warning::Dependency audit detected issues. See .artifacts/dep-audit.json for details."
-            # Don't fail the build, just warn
           fi
 
       # ---------- k6 Smoke (package only) ----------
