--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+x-mongodb-uri: &compose_mongodb_uri ${COMPOSE_MONGODB_URI:-mongodb://${MONGO_INITDB_ROOT_USERNAME:-fixzit_admin}:${MONGO_INITDB_ROOT_PASSWORD:?Set MONGO_INITDB_ROOT_PASSWORD}@mongodb:27017/${MONGO_INITDB_DATABASE:-fixzit}?authSource=admin}
+
 services:
   mongodb:
     image: mongo:7.0
@@ -6,9 +8,9 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: fixzit_admin
-      MONGO_INITDB_ROOT_PASSWORD: fixzit_secure_password_2025
-      MONGO_INITDB_DATABASE: fixzit
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-fixzit_admin}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:?Set MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE:-fixzit}
     volumes:
       - mongodb_data:/data/db
       - mongodb_config:/data/configdb
@@ -29,8 +31,8 @@ services:
     ports:
       - "7700:7700"
     environment:
-      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY:-fixzit_search_master_key_2025_secure}
-      MEILI_ENV: production
+      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY:?Set MEILI_MASTER_KEY}
+      MEILI_ENV: ${MEILI_ENV:-production}
       MEILI_NO_ANALYTICS: true
       MEILI_HTTP_PAYLOAD_SIZE_LIMIT: 104857600  # 100MB for bulk indexing
     volumes:
@@ -49,8 +51,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        JWT_SECRET: ${JWT_SECRET:-c8f5e9a1b2d3c4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0c1d2e3f4a5b6c7d8e9}
-        MONGODB_URI: mongodb://fixzit_admin:fixzit_secure_password_2025@mongodb:27017/fixzit?authSource=admin
+        JWT_SECRET: ${JWT_SECRET:?Set JWT_SECRET before building}
+        MONGODB_URI: *compose_mongodb_uri
         NODE_ENV: production
     container_name: fixzit-app
     restart: unless-stopped
@@ -58,16 +60,16 @@ services:
       - "3000:3000"  # ✅ FIXED: Changed from 5000:5000 to 3000:3000 (Next.js default)
     environment:
       NODE_ENV: production
-      MONGODB_URI: mongodb://fixzit_admin:fixzit_secure_password_2025@mongodb:27017/fixzit?authSource=admin
-      MONGODB_DB: fixzit
-      JWT_SECRET: ${JWT_SECRET:-c8f5e9a1b2d3c4e5f6a7b8c9d0e1f2a3b4c5d6e7f8a9b0c1d2e3f4a5b6c7d8e9}
+      MONGODB_URI: *compose_mongodb_uri
+      MONGODB_DB: ${MONGODB_DB:-fixzit}
+      JWT_SECRET: ${JWT_SECRET:?Set JWT_SECRET before running}
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}  # ✅ ADDED: Required for NextAuth
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}  # ✅ ADDED: Required for NextAuth
       STRIPE_PUBLISHABLE_KEY: ${STRIPE_PUBLISHABLE_KEY}  # ✅ ADDED: Required for payments
       NEXT_PUBLIC_APP_URL: http://localhost:3000
       NEXT_PUBLIC_API_URL: http://localhost:3000
       MEILI_HOST: http://meilisearch:7700
-      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY:-fixzit_search_master_key_2025_secure}
+      MEILI_MASTER_KEY: ${MEILI_MASTER_KEY:?Set MEILI_MASTER_KEY}
       PORT: 3000
     volumes:
       - ./uploads:/app/uploads  # ✅ ADDED: Persistent uploads directory
