--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "qa:db": "node qa/scripts/dbConnectivity.mjs",
     "qa:scan:placeholders": "node qa/scripts/scanPlaceholders.mjs",
     "qa:scan:duplicates": "node qa/scripts/scanDuplicates.mjs",
-    "qa:e2e": "playwright test --config=tests/playwright.config.ts",
+    "qa:e2e": "bash scripts/run-playwright.sh",
     "verify:prep": "node -e \"require('fs').mkdirSync('_artifacts',{recursive:true})\"",
     "verify:routes": "tsx scripts/verify-routes.ts && tsx scripts/check-nav-routes.ts",
     "check:nav-routes": "tsx scripts/check-nav-routes.ts",
@@ -52,21 +52,22 @@
     "test:verbose": "vitest run --reporter=verbose",
     "test:single": "vitest run",
     "test:changed": "vitest run --changed",
-    "test:e2e": "playwright test --config=tests/playwright.config.ts",
+    "test:e2e": "bash scripts/run-playwright.sh",
     "test:e2e:loop": "node tests/loop-runner.mjs",
-    "test:e2e:setup": "playwright test --config=tests/playwright.config.ts tests/setup-auth.ts",
-    "scan:i18n": "node tests/i18n-scan.mjs",
+    "test:e2e:setup": "bash scripts/run-playwright.sh tests/setup-auth.ts",
+    "scan:i18n": "cross-env I18N_IGNORE=watch-all node tests/i18n-scan.mjs",
     "scan:i18n:v2": "node scripts/i18n-scan-v2.mjs",
+    "scan:i18n:audit": "node scripts/audit-translations.mjs",
     "scan:api": "node scripts/api-scan-v2.mjs",
     "fixzit:agent": "node scripts/fixzit-agent.mjs --report --port 3000 --keepAlive true --limit=0",
     "fixzit:agent:apply": "node scripts/fixzit-agent.mjs --apply --report --port 3000 --keepAlive true --limit=0",
     "fixzit:agent:stop": "node scripts/stop-dev.js",
     "verify:gate": "npm run typecheck && npm run lint && npm run scan:i18n && npm run test:e2e",
-    "test:headed": "playwright test --config=tests/playwright.config.ts --headed",
-    "test:debug": "playwright test --config=tests/playwright.config.ts --debug",
-    "test:ui": "playwright test --config=tests/playwright.config.ts --ui",
+    "test:headed": "bash scripts/run-playwright.sh --headed",
+    "test:debug": "bash scripts/run-playwright.sh --debug",
+    "test:ui": "bash scripts/run-playwright.sh --ui",
     "test:install": "playwright install",
-    "test:e2e:db": "playwright test tests/e2e/database.spec.ts",
+    "test:e2e:db": "PLAYWRIGHT_CONFIG=playwright.config.ts bash scripts/run-playwright.sh tests/e2e/database.spec.ts",
     "verify:db:deploy": "tsx scripts/deploy-db-verify.ts",
     "setup:production:db": "tsx scripts/setup-production-db.ts",
     "artifacts:init": "mkdir -p _artifacts",
