--- a/env.example
+++ b/env.example
@@ -29,6 +29,14 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 MONGODB_URI=mongodb://localhost:27017/fixzit
 MONGODB_DB=fixzit
 
+# Local Docker secrets (used by docker-compose.yml)
+# NOTE: Set strong values before running `docker compose up`
+MONGO_INITDB_ROOT_USERNAME=fixzit_admin
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=fixzit
+# Optional override for app containers (defaults to local Mongo service URI)
+COMPOSE_MONGODB_URI=
+
 # === JWT AUTHENTICATION ===
 # MUST be 32+ characters, cryptographically random
 # Generate: openssl rand -hex 32
@@ -86,7 +94,8 @@ BULLMQ_REDIS_PASSWORD=
 # Development (Docker): http://localhost:7700
 # Production: Use managed Meilisearch Cloud or self-hosted
 MEILI_HOST=http://localhost:7700
-MEILI_MASTER_KEY=fixzit_search_master_key_2025_secure
+# Generate: openssl rand -hex 32
+MEILI_MASTER_KEY=
 
 # Legacy (Deprecated - migrating to Meilisearch)
 OPENSEARCH_URL=
@@ -102,6 +111,10 @@ S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=fixzit-marketplace
 S3_REGION=us-east-1
+
+# Local MinIO credentials (docker-compose.souq.yml)
+MINIO_ROOT_USER=fixzit-minio
+MINIO_ROOT_PASSWORD=
 
 # === EVENT BUS (NATS or Kafka) ===
 # NATS (Recommended for simpler setup)
