fix(pr-321): address code review feedback - refund retries, type safety, test improvements
## Critical Fixes (PR #321 Review Comments)

### 1. Refund Processor - Queue-Based Retries
- Add BullMQ queue integration for durable retry scheduling
- Implement in-process fallback when queue unavailable
- Track nextRetryAt timestamp for visibility
- Create dedicated refund-retry-worker job processor
- Exponential backoff with configurable delays

### 2. Returns Service - Defensive Coding
- Add null safety check for rma.refund before property access
- Remove redundant save logic (dead else branches)
- Simplify inspectReturn and processRefund methods

### 3. Test Infrastructure - Type Safety & Reliability
- Fix tests/setup.ts type annotation (ModelInstance[] & QueryHelpers)
- Add QueryHelpers interface for chainable query methods
- Improve E2E auth test selectors and timeouts
- Add logoutUser utility for reusable test patterns
- Enhance CSRF token handling for auth tests

### 4. Models - Type Safety Improvements
- Fix BookingModel interface to extend MModel<IBooking>
- Remove unsafe 'as unknown as' double casts
- Add explicit 'this: ModelType' typing for static methods
- Fix ProjectModel static method type annotations
- Update aqarBoost documentation (env var pricing)

### 5. Configuration & CI/CD
- Add production env validation script (guard:prod-env)
- Implement prebuild cache clean for CI/preview
- Add deployment guardrails documentation
- Enhance next.config.js with prod validation
- Update middleware rate limiting for Playwright tests
- Improve Playwright config with flexible test selection

### 6. Dependencies & Scripts
- Add refunds queue to QUEUE_NAMES
- Add refunds:worker npm script
- Add guard:prod-env npm script
- Update build script with cache clean hook

## Review Comments Addressed
- ✅ services/souq/returns-service.ts:607 - null safety for rma.refund
- ✅ services/souq/returns-service.ts:514,632 - remove duplicate save logic
- ✅ tests/setup.ts:165 - fix type anno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
   "typescript.tsserver.pluginPaths": [],
   "typescript.locale": "en",
 
+  // Keep Node memory cap but avoid enabling the inspector, which was forcing
+  // auto-attach/debugger pauses on every terminal command (e.g., pnpm, Playwright).
   "terminal.integrated.env.windows": {
     "NODE_OPTIONS": "--max-old-space-size=8192"
   },
