--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:mem": "cross-env NODE_OPTIONS=--max-old-space-size=8192 ./node_modules/.bin/next dev --turbo",
     "dev:webpack": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev",
     "dev:clean": "bash scripts/cleanup-dev-cache.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next dev --turbo",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
+    "build": "bash scripts/prebuild-cache-clean.sh && cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 50 --ignore-pattern '.next/**' --ignore-pattern 'public/**' --ignore-pattern '_artifacts/**' --ignore-pattern 'deployment/**' --ignore-pattern 'playwright-report/**' --ignore-pattern 'e2e-test-results/**' --ignore-pattern 'qa/**' --ignore-pattern 'scripts/**' --ignore-pattern 'tools/**'",
     "lint:prod": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --max-warnings 0 --report-unused-disable-directives",
@@ -39,12 +39,14 @@
     "qa:scan:duplicates": "node qa/scripts/scanDuplicates.mjs",
     "qa:e2e": "bash scripts/run-playwright.sh",
     "notifications:replay-dlq": "tsx scripts/notifications/replay-dlq.ts",
+    "refunds:worker": "tsx jobs/refund-retry-worker.ts",
     "verify:prep": "node -e \"require('fs').mkdirSync('_artifacts',{recursive:true})\"",
     "check:route-refs": "tsx scripts/check-route-references.ts",
     "verify:routes": "tsx scripts/check-route-aliases.ts && tsx scripts/check-route-references.ts && tsx scripts/verify-routes.ts && tsx scripts/check-nav-routes.ts",
     "verify:routes:http": "tsx scripts/run-route-http-check.ts",
     "verify:org-context": "tsx scripts/verify-org-context.ts && SKIP_GLOBAL_MONGO=true vitest run tests/smoke/org-context-flow.test.tsx tests/server/support/support-org-apis.test.ts",
     "guard:static": "bash scripts/check-org-guards.sh",
+    "guard:prod-env": "node scripts/ci/verify-prod-env.js",
     "check:route-aliases": "tsx scripts/check-route-aliases.ts",
     "check:route-aliases:json": "tsx scripts/check-route-aliases.ts --json _artifacts/route-aliases.json",
     "archive:route-metrics": "tsx scripts/archive-route-aliases.ts",
