fix: Phase 1 critical security, infrastructure, and validation fixes
## Security Fixes (SEC-1, SEC-2, SEC-3)
- Remove hardcoded demo passwords - now requires explicit env config
- Guard OTP code exposure to development mode only (NODE_ENV=development)
- Add CSRF protection middleware for all state-changing API requests
- CSRF exempt routes: /api/auth, /api/webhooks, /api/health, /api/copilot

## Infrastructure Fixes (INFRA-1 through INFRA-5)
- Dockerfile: Multi-stage build, Node 20-alpine, pnpm, HEALTHCHECK
- Dockerfile: Non-root user for security, standalone output
- vercel.json: Enable --frozen-lockfile, add regions config
- next.config.js: Disable production browser source maps (security)

## Validation Fixes (VAL-1, VAL-2)
- lib/zatca.ts: Add TLV field length validation per ZATCA spec (max 256 bytes)
- lib/utils/objectid.ts: Add parseObjectId() with ValidationError class

## CI/CD Fixes (CICD-1)
- .github/workflows/test-runner.yml: Full test workflow replacing stub

All changes verified with ESLint and TypeScript checks.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": "nextjs",
-  "installCommand": "pnpm install --frozen-lockfile=false",
+  "installCommand": "pnpm install --frozen-lockfile",
   "buildCommand": "pnpm build",
   "outputDirectory": ".next",
   "build": {
@@ -12,5 +12,6 @@
     "enabled": true,
     "autoAlias": true,
     "silent": false
-  }
+  },
+  "regions": ["cdg1"]
 }
