fix(deps): upgrade node-forge to 1.3.2 to resolve CVE vulnerabilities
Resolves 3 Dependabot alerts:
- GHSA-554w-wpv2-vw27 (high): ASN.1 Unbounded Recursion
- GHSA-5gfm-wpxj-wjgq (high): ASN.1 Validator Desynchronization
- GHSA-65ch-62r8-g69g (moderate): ASN.1 OID Integer Truncation

Added pnpm override for node-forge>=1.3.2
All 1202 tests pass

--- a/package.json
+++ b/package.json
@@ -270,7 +270,8 @@
       "vite": "^7.1.11",
       "import-in-the-middle": "1.15.0",
       "require-in-the-middle": "7.5.2",
-      "mongodb": "6.21.0"
+      "mongodb": "6.21.0",
+      "node-forge": ">=1.3.2"
     }
   },
   "simple-git-hooks": {
