fix(security): SEC-003 Default plan least privilege & test infrastructure
Security Fixes:
- Apply least-privilege defaults for subscription plans
- Strengthen FM permission checks with org membership validation
- Add security monitoring tests for rate limiting and org isolation

Test Infrastructure:
- Configure VS Code to use tsconfig.vitest.json for test files
- Update test auth setup for consistent role handling
- Add CI guard checks script

Testing:
- All 26 targeted tests pass
- TypeScript clean
- ESLint clean

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "mongo:normalize": "tsx scripts/mongo/normalize_org_ids.ts",
     "mongo:normalize:apply": "tsx scripts/mongo/normalize_org_ids.ts --apply",
     "guardrails:all": "npm run sidebar:snapshot && npm run ui:freeze:check && npm run i18n:check && npm run consolidate:dry",
+    "guard:ci": "bash scripts/ci-guard-checks.sh",
     "check:mock-flags": "node scripts/check-mock-flags.js",
     "rbac:client:generate": "tsx scripts/rbac/generate-client-roles.ts",
     "rbac:client:check": "tsx scripts/rbac/generate-client-roles.ts --check",
