--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "typescript.validate.enable": true,
   "typescript.tsserver.experimental.enableProjectDiagnostics": false,
+  "typescript.tsserver.projectConfigPaths": [
+    "tsconfig.json",
+    "tsconfig.vitest.json"
+  ],
   "javascript.validate.enable": true,
   "eslint.enable": true,
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
