fix(security): Enforce multi-tenant isolation and RBAC alignment (#373)
Merged via PR Copilot batch processing.

## Changes Summary
- Fixed 3 critical security issues (TENANT-001, RBAC-DRIFT-005, ABAC-001/002)
- Added 43 RBAC parity tests
- Added lint:rbac and rbac:parity scripts for drift detection
- Complete server/client/API RBAC alignment

## Verification
- ✅ TypeScript: 0 errors
- ✅ ESLint: 0 errors
- ✅ Parity tests: 43/43 passing
- ✅ Rebased on latest main (includes PR #372)

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "lint:mongo-unwrap": "node tools/check-mongo-unwrap.js",
     "lint:prod:baseline": "eslint app components lib services --ext .ts,.tsx,.js,.jsx --format json -o _artifacts/eslint-baseline.json",
     "lint:scripts": "eslint scripts tools --ext .ts,.tsx,.js,.jsx",
-    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run typecheck",
+    "lint:ci": "npm run lint:prod && npm run rbac:client:check && npm run lint:rbac && npm run typecheck",
     "lint:next": "next lint",
     "lint:rtl": "node scripts/check-rtl-logical.js",
+    "lint:rbac": "npx tsx scripts/lint-rbac-parity.ts",
     "style:scan": "node scripts/scan-hex.js",
     "typecheck": "tsc -p .",
     "type-check:last": "node scripts/typecheck-tail.mjs",
@@ -128,6 +129,7 @@
     "check:mock-flags": "node scripts/check-mock-flags.js",
     "rbac:client:generate": "tsx scripts/rbac/generate-client-roles.ts",
     "rbac:client:check": "tsx scripts/rbac/generate-client-roles.ts --check",
+    "rbac:parity": "node scripts/rbac/check-parity.mjs",
     "lint:md": "markdownlint \"**/*.md\" \"!node_modules\" \"!.next\"",
     "lint:md:fix": "markdownlint --fix \"**/*.md\" \"!node_modules\" \"!.next\"",
     "guard:fm-hooks": "node -e \"const {execSync} = require('child_process'); try { const result = execSync('grep -rn \\'eslint-disable react-hooks/rules-of-hooks\\' app/fm 2>/dev/null || true', {encoding: 'utf8'}); if (result.trim()) { console.log('❌ Found react-hooks/rules-of-hooks disables in app/fm (use FmGuardedPage)'); process.exit(1); } } catch(e) { }\"",
