--- a/env.example
+++ b/env.example
@@ -490,6 +490,47 @@ DEBUG=false
 LOG_LEVEL=info               # Options: error, warn, info, verbose, debug
 
 # =============================================================================
+# E2E TESTING (Playwright)
+# =============================================================================
+# Credentials for E2E tests validating RBAC (Role-Based Access Control).
+# These must be set for E2E tests to run - no fallback defaults are used.
+# 
+# SECURITY: Never commit actual credentials. Use .env.local for local testing,
+# or configure CI secrets for automated pipelines.
+#
+# Create test users in your database with appropriate roles:
+# - FINANCE_OFFICER: TEAM_MEMBER role + subRole: 'FINANCE_OFFICER'
+# - HR_OFFICER: TEAM_MEMBER role + subRole: 'HR_OFFICER'
+# - SUPPORT_AGENT: TEAM_MEMBER role + subRole: 'SUPPORT_AGENT'
+# - OPERATIONS_MANAGER: TEAM_MEMBER role + subRole: 'OPERATIONS_MANAGER'
+# - TEAM_MEMBER: TEAM_MEMBER role with no subRole
+# - ADMIN: ADMIN role
+
+# Finance Officer (access to finance module APIs)
+TEST_FINANCE_OFFICER_EMAIL=
+TEST_FINANCE_OFFICER_PASSWORD=
+
+# HR Officer (access to HR module APIs)
+TEST_HR_OFFICER_EMAIL=
+TEST_HR_OFFICER_PASSWORD=
+
+# Support Agent (access to support/tickets APIs)
+TEST_SUPPORT_AGENT_EMAIL=
+TEST_SUPPORT_AGENT_PASSWORD=
+
+# Operations Manager (access to work orders, properties, marketplace APIs)
+TEST_OPERATIONS_MANAGER_EMAIL=
+TEST_OPERATIONS_MANAGER_PASSWORD=
+
+# Team Member without sub-role (limited access, used for negative tests)
+TEST_TEAM_MEMBER_EMAIL=
+TEST_TEAM_MEMBER_PASSWORD=
+
+# Admin user (full access to all modules)
+TEST_ADMIN_EMAIL=
+TEST_ADMIN_PASSWORD=
+
+# =============================================================================
 # NOTES
 # =============================================================================
 # 1. Copy this file to .env.local for development
