fix(e2e): Complete fail-fast credential enforcement per PR #376 audit
SECURITY FIXES (auth.spec.ts):
1. REMOVED offline fallback credentials (Test@1234, admin@offline.test)
   - getPrimaryUser() and getNonAdminUser() now directly call getRequiredTestCredentials()
   - No try/catch with fallbacks - tests fail fast if env vars missing

2. FIXED HAS_PRIMARY_USER/HAS_NON_ADMIN_USER hardcoded true
   - Now properly uses hasTestCredentials() to check env availability
   - Conditional skip logic works correctly

3. FIXED lenient [200, 403] admin RBAC check (line 286)
   - Admin MUST get 200 for /api/work-orders
   - 403 now fails the test - catches RBAC regressions

4. ADDED employee-number login test gating
   - Test now explicitly checks PRIMARY_USER.employeeNumber is present
   - Fails with clear message if TEST_ADMIN_EMPLOYEE env not set

INTERFACE UPDATES (credentials.ts):
5. ADDED employeeNumber to TestCredentials interface
   - Optional field for employee-number login tests
   - getRequiredTestCredentials() now includes TEST_*_EMPLOYEE if set

6. ADDED getTestOrgId() and getTestOrgIdOptional() helpers
   - For tenant-scoping validation in multi-tenancy checks
   - Fail-fast pattern consistent with other credential helpers

This ensures:
- Tests fail immediately if CI/Vercel secrets are misconfigured
- No false-positive passing tests with weak default credentials
- Employee-number login tests are properly gated
- Admin RBAC access is strictly validated
- Multi-tenancy validation helpers available for org_id checks

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -434,11 +434,18 @@ jobs:
           # Only default if Lighthouse was expected to run but parsing failed
           if [ "$lighthouse_parsed" = "false" ]; then
             if [ -d "lhci_reports" ] || [ -d ".lighthouseci" ]; then
+              echo "::warning::Lighthouse ran but couldn't parse scores - investigate report format"
               echo "⚠️ Lighthouse ran but couldn't parse scores - defaulting to 50 (investigate)"
               perf_score=50
             else
-              echo "ℹ️ No Lighthouse reports found - performance score is 0"
+              # AUDIT-2025-12: Emit GitHub warning when performance data is missing
+              # This ensures PRs cannot be merged silently without performance validation
+              echo "::warning::No Lighthouse performance data available - PR missing performance validation"
+              echo "⚠️ No Lighthouse reports found - performance score is 0"
+              echo "ℹ️ Consider running 'pnpm lighthouse' locally before merging"
               perf_score=0
+              # Set output for branch protection rules
+              echo "LIGHTHOUSE_MISSING=true" >> $GITHUB_OUTPUT
             fi
           fi
           
