fix(env,security): Add auth env vars and harden PII migration backup
- env.example: Add AUTH_TRUST_HOST=true with documentation for Vercel deployments
- env.example: Add PUBLIC_ORG_ID and DEFAULT_ORG_ID for multi-tenant auth routes
- migrate-encrypt-finance-pii.ts: SECURITY FIX - TTL failure now aborts migration
  - Prevents plaintext PII backups from persisting indefinitely
  - Add --allow-plaintext-backup flag for explicit opt-in (NOT RECOMMENDED)
  - Auto-cleanup incomplete backup on TTL failure
- POST_STABILIZATION_AUDIT_REPORT.md: Update role matrix to canonical 20 roles

Resolves:
- Production /api/auth/session 500 errors from missing AUTH_TRUST_HOST
- Signup 500 errors from missing PUBLIC_ORG_ID/DEFAULT_ORG_ID
- Finance PII compliance risk from best-effort TTL backups
- Audit doc drift from types/user.ts canonical roles

--- a/env.example
+++ b/env.example
@@ -55,6 +55,13 @@ JWT_SECRET=
 # Generate: openssl rand -base64 32
 NEXTAUTH_SECRET=
 
+# ⚠️ CRITICAL FOR VERCEL/PROXIED DEPLOYMENTS:
+# Required to satisfy NextAuth host validation when running behind a reverse proxy.
+# Without this, /api/auth/session and /api/auth/csrf will return 500 errors.
+# Set to 'true' for Vercel, Cloudflare, AWS ALB, or any proxied deployment.
+# Self-hosted/direct origin deployments can leave this unset (defaults to false).
+AUTH_TRUST_HOST=true
+
 # Allow fallback demo logins (local smoke tests only)
 ALLOW_DEMO_LOGIN=false
 # Optional: override default demo passwords (comma-separated)
@@ -574,6 +581,13 @@ TEST_ADMIN_EMPLOYEE=
 # Used by expectAllowedWithBodyCheck() to validate org_id in API responses
 # This catches cross-tenant data leaks that status-only checks miss
 TEST_ORG_ID=
+
+# ⚠️ REQUIRED FOR PUBLIC AUTH ROUTES (signup, forgot-password, reset-password, etc.)
+# Create a dedicated "Public" organization in your database for unauthenticated users.
+# This isolates public user data from internal tenant data.
+# The signup route WILL FAIL with 500 error if these are not set.
+PUBLIC_ORG_ID=
+DEFAULT_ORG_ID=
 
 # Optional: Bypass TEST_ORG_ID requirement for local development
 # When running E2E tests locally without TEST_ORG_ID, tests will fail by default
