fix(security): Hash sessionId in QA logs and optimize GET endpoint
Security fixes for app/api/qa/log/route.ts:
- Hash sessionId with SHA-256 (first 16 chars) to prevent credential leakage
- Cap GET limit from 1000 to 200 to reduce response size
- Add projection to exclude bulky 'data' field by default (opt-in via includeData=true)

Index enforcement:
- Add qa_logs indexes to lib/db/collections.ts createIndexes()
- Includes TTL index (90 days) for automatic log cleanup
- Indexes: timestamp desc, orgId+timestamp, orgId+event+timestamp

Tests:
- Fixed mock isolation issues using runtime state pattern
- All 13 qa/log tests passing

Resolves audit findings:
- Major: Raw sessionId stored in logs (credential leakage risk)
- Minor: GET allows up to 1000 entries (response size issue)
- Minor: Index/TTL enforcement relies on external migration

--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -49,6 +49,11 @@ jobs:
       - name: Run Type Check
         run: pnpm typecheck || pnpm tsc --noEmit
 
+      - name: Ensure Mongo Indexes (idempotent)
+        env:
+          MONGODB_URI: ${{ env.MONGODB_URI }}
+        run: pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); await (await getDatabase()).client?.close?.(); })();"
+
       - name: Run Unit Tests
         run: |
           # Run unit tests with coverage
