--- a/package.json
+++ b/package.json
@@ -285,7 +285,9 @@
       "import-in-the-middle": "1.15.0",
       "require-in-the-middle": "7.5.2",
       "mongodb": "6.21.0",
-      "node-forge": ">=1.3.2"
+      "node-forge": ">=1.3.2",
+      "jws@^3": "3.2.3",
+      "jws@^4": "4.0.1"
     }
   },
   "simple-git-hooks": {
