fix(security): Complete STRICT v4.1 tenant isolation for claims and souq services
## Security Fixes Applied:

### claim-service.ts (BLOCKER → FIXED)
- getClaim now requires orgId with allowOrgless for test mode
- addEvidence, addSellerResponse, makeDecision all require orgId
- fileAppeal, addAdminNote, updateStatus all require orgId
- getClaimStats requires orgId with buildIdMatch
- tryAutoResolveClaim passes orgId to investigateClaim

### refund-processor.ts (MAJOR → FIXED)
- getRefundStats uses buildOrgFilter instead of direct equality
- calculateSellerDeduction requires orgId, passes to getClaim
- Fixed lint error for mock type in test hook

### Claims API Routes (FIXED)
- All claim routes check orgId and use buildOrgScopeFilter
- Appeal route properly validates orgId
- Decision route uses Role enum for RBAC
- Response route uses proper type annotation

### Tests (FIXED)
- All claims.test.ts insertOne calls now include orgId
- Tests pass with proper tenant isolation

Verification:
- typecheck: ✅ 0 errors
- lint: ✅ 0 errors
- tests: ✅ 1830 passed

--- a/env.example
+++ b/env.example
@@ -18,10 +18,14 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # Development: http://localhost:3000
 BASE_URL=http://localhost:3000
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000
 
 # Public contact details (surfaced on /about). Must be set in production.
-NEXT_PUBLIC_CONTACT_EMAIL=info@fixzit.com
+NEXT_PUBLIC_CONTACT_EMAIL=info@example.com
 NEXT_PUBLIC_CONTACT_PHONE=
+NEXT_PUBLIC_SUPPORT_EMAIL=support@example.com
+SELLER_PORTAL_URL=http://localhost:3000
+SELLER_SUPPORT_EMAIL=support@example.com
 
 # =============================================================================
 # CRITICAL: REQUIRED FOR PRODUCTION
