fix(souq): comprehensive Meilisearch tenant isolation & RBAC enforcement
🔐 STRICT v4.1 Compliance - Tenant Isolation:
- Changed Meilisearch primary keys to composite 'id' (orgId_fsin, orgId_sellerId)
- Added ensureIndexWithPrimaryKey() for index migration verification
- Made fullReindex tenant-scoped with deleteDocuments({ filter }) instead of deleteAllDocuments()
- Added orgId to sellers index filterableAttributes
- Transform methods now reject org-less documents (no empty string defaults)
- Added stable sorting .sort({ _id: 1 }) to reindex queries

🛡️ RBAC Alignment:
- Fixed DELETE handler in campaigns/[id]/route.ts to use canonical ALLOWED_AD_ROLES
- Unified role checks with hasAnyRole() utility

🧹 Cleanup:
- Removed duplicate MEILI_HOST/MEILI_MASTER_KEY entries from secrets.json
- All changes verified with pnpm typecheck && pnpm lint

Resolves cross-tenant data leakage vulnerabilities in search indexing.

--- a/env.example
+++ b/env.example
@@ -158,7 +158,7 @@ MEILI_HOST=http://localhost:7700
 # Generate: openssl rand -hex 32
 MEILI_MASTER_KEY=
 
-# Legacy (Deprecated - migrating to Meilisearch)
+# Legacy (Deprecated - kept for backward compatibility only; prefer MEILI_HOST/MEILI_MASTER_KEY)
 OPENSEARCH_URL=
 OPENSEARCH_USERNAME=
 OPENSEARCH_PASSWORD=
